[project]
name = "hass-heatzy"
version = "6.5.3"
description = "Heatzy integration for Home Assistant"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12.0"
authors = [{ name = "cyr-ius", email = "cyr-ius@ipocus.net" }]
dependencies = ["heatzypy==2.5.7"]

[dependency-groups]
dev = [
    "heatzypy",
    "pytest-homeassistant-custom-component",
    "async-upnp-client",
]

[project.urls]
Homepage = "https://github.com/cyr-ius/hass-heatzy"
Documentation = "https://github.com/cyr-ius/hass-heatzy"
Issues = "https://github.com/cyr-ius/hass-heatzy/issues"

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
ignore = ["E402"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --cov=custom_components --cov-report=term-missing --cov-fail-under=85"
pythonpath = ["."]
testpaths = ["tests/"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
log_cli = true
